--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/" href="src/assets/images/logo.svg" />
-    <link rel="preload" as="image" href="/src/assets/images/bg-today-small.svg">
+    <link rel="preload" as="image/" href="/src/assets/images/bg-today-small.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
   </head>
